<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuizDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Quiz Demo</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="rules">RULES:</string>
    <string name="rules1">Each question is worth 10 points</string>
    <string name="rules2">Each wrong answer reduces points by 3</string>

</resources>
